# bing-image-urls

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  poetry.lock-  pyproject.toml  tbump.toml
.github/workflows/: build.yml
bing_image_urls/: __init__.py  bing_image_urls.py  get_image_size.py
tests/: test_bing_image_urls.py  test_get_filelike.py
