[tool.poetry]
name = "bing-image-urls"
version = "0.1.4"
description = "fetch bing image urls based on keywords"
readme ="README.md"
authors = ["ffreemt"]
repository = "https://github.com/ffreemt/bing-image-urls"
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7.0"
httpx = "^0.23.1"
logzero = "^1.5.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^3.8.3"
pre-commit = "^2.13.0"
tbump = "^6.3.2"

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'  # must use single quotes
exclude = '''  # must use single quotes
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
'''

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
